# refextract

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  build.rs  run-tests.sh
.github/workflows/: ci.yml
kbs/: journal-titles.kb
scripts/: compare_refs.py  download-papers.sh  evaluate.sh  gap_analysis.py
src/: collect.rs  doi.rs  kb.rs  layout.rs  main.rs  markers.rs  ocr.rs  parse.rs  pdf.rs  tokenizer.rs  types.rs  zones.rs
