[package]
name = "refextract"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
once_cell = "1"
pdfium-render = { version = "0.8", features = ["image"] }
leptess = "0.14"
image = "0.25"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = "3"
dirs = "6"

[profile.release]
strip = true
lto = false
